contador css com hover

--- a/index.html
+++ b/index.html
@@ -9,9 +9,5 @@
 </head>
 <body>
     <div class="counter-reset" >sera</div>
-    <div class="up-counter" >soma</div>
-    <div class="up-counter" >soma</div>
-    <div class="print-counter up-counter" >mostra </div>   
-    <div class="teste"></div>
-</body>
-</html>
+    < class="print-counter up-counter" </div>
+    </html>
