--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <div class="counter-reset" >sera</div>
-    < class="print-counter up-counter" </div>
-    </html>
+    <div class="print-counter up-counter" ></div>   
+    
+</body>
+</html>
