--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>contador em css</title>
 </head>
 <body>
-    <div class="counter-reset" >sera</div>
-    <div class="print-counter up-counter" ></div>   
+<div class="transform">Passe o mouse</div>
+<div class="transform1">Passe o mouse</div>
+<div class="transform2">passe o moude</div>
     
 </body>
 </html>
